--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,50 @@
-United States Dollar
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link rel="icon" type="image/png" href="/static/usd.png"/>
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image" content="/static/usd.png">
+    {% block head%}
+    <title>{% block title %}United States Dollar{% endblock %}</title>
+    <meta name="description" content="United States Dollar (USD) charts, and more ">
+    {% endblock %}
+    <link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/main.css">
+</head>
+<body>
+<div class="container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
+        <a class="navbar-brand" href="/">United States Dollar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+            </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+        </div>
+    </nav>
+</div>
+<div class="container">
+    {% for c in currency['results'] %}
 
-{% for c in currency['results'] %}
-<div>{{c}}</div>
-{%endfor%}
+    <div class="col-12-sm">
+        <div>{{c}}</div>
+    </div>
+    {%endfor%}
+</div>
+{% block scripts %}
+<script type="text/javascript" src="/static/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
+
+{% endblock %}
+</body>
+</html>
