--- a/templates/index.html
+++ b/templates/index.html
@@ -38,26 +38,21 @@
         <div class="row">
             <div class="col-sm-2">Symbol</div>
             <div class="col-sm-3">Name</div>
-
             <div class="col-sm-2">Price</div>
             <div class="col-sm-2">Change (24h)</div>
             <div class="col-sm-3">Price Graph (7d)</div>
         </div>
-
     </div>
-    {% for c in currency['results'] %}
+    {% for c in currency %}
     <div class="col-sm-12">
         <div class="row">
-            <div class="col-sm-2">{{currency['results'][c]['currencySymbol']}}
+            <div class="col-sm-2">{{currency[c]['currencySymbol']}}
             </div>
-            <div class="col-sm-3">{{currency['results'][c]['currencyName']}}</div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3">{{currency[c]['currencyName']}}</div>
+            <div class="col-sm-2">{{currency[c]['price']}}</div>
             <div class="col-sm-2"></div>
             <div class="col-sm-3"></div>
-
         </div>
-
-
     </div>
     {%endfor%}
 </div>
