--- a/templates/index.html
+++ b/templates/index.html
@@ -34,13 +34,15 @@
     </nav>
 </div>
 <div class="container">
+    <h1 class="text-center">USD to Other Currencies
+</h1>
     <div class="col-sm-12">
         <div class="row">
-            <div class="col-sm-2">Symbol</div>
-            <div class="col-sm-3">Name</div>
-            <div class="col-sm-2">Price</div>
-            <div class="col-sm-2">Change (24h)</div>
-            <div class="col-sm-3">Price Graph (7d)</div>
+            <div class="col-sm-2"><strong>Symbol</strong></div>
+            <div class="col-sm-3"><strong>Name</strong></div>
+            <div class="col-sm-2"><strong>Price</strong></div>
+            <div class="col-sm-2"><strong>Change (24h</strong>)</div>
+            <div class="col-sm-3"><strong>Price Graph (7d)</strong></div>
         </div>
     </div>
     <hr>
