--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 <div class="container">
     <h1 class="text-center">USD to Other Currencies
 </h1>
-    <div class="col-sm-12">
+    <div class="col-sm-12 d-none d-sm-block">
         <div class="row">
             <div class="col-sm-2"><strong>Symbol</strong></div>
             <div class="col-sm-3"><strong>Name</strong></div>
@@ -45,16 +45,33 @@
             <div class="col-sm-3"><strong>Price Graph (7d)</strong></div>
         </div>
     </div>
+    <div class="col-xs-12 d-block d-sm-none">
+        <div class="row">
+            <div class="col-xs-2"><strong>Symbol</strong></div>
+            <div class="col-xs-3"><strong>Name</strong></div>
+            <div class="col-xs-2"><strong>Price</strong></div>
+            <div class="col-xs-2"><strong>Change (24h</strong>)</div>
+            <div class="col-xs-3"><strong>Price Graph (7d)</strong></div>
+        </div>
+    </div>
     <hr>
     {% for c in currency %}
-    <div class="col-sm-12">
+    <div class="col-sm-12 d-none d-sm-block">
         <div class="row">
-            <div class="col-sm-2">{{currency[c]['currencySymbol']}}
-            </div>
-            <div class="col-sm-3">{{currency[c]['currencyName']}}</div>
+            <div class="col-sm-2"><span>{{currency[c]['currencySymbol']}}</span></div>
+            <div class="col-sm-3"><span>{{currency[c]['currencyName']}}</span></div>
             <div class="col-sm-2">{{currency[c]['price']}}</div>
             <div class="col-sm-2"></div>
             <div class="col-sm-3"></div>
+        </div>
+    </div>
+    <div class="col-xs-12 d-block d-sm-none">
+        <div class="row">
+            <div class="col-xs-2">{{currency[c]['currencySymbol']}}</div>
+            <div class="col-xs-3">{{currency[c]['currencyName']}}</div>
+            <div class="col-xs-2">{{currency[c]['price']}}</div>
+            <div class="col-xs-2"></div>
+            <div class="col-xs-3"></div>
         </div>
     </div>
     <hr>
