--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="col-xs-12 d-block d-sm-none">
         <div class="row">
-            <div class="col-xs-2">{{currency[c]['currencySymbol']}}</div>
+            <div class="col-xs-2"><div class="card">{{currency[c]['currencySymbol']}}</div></div>
             <div class="col-xs-3">{{currency[c]['currencyName']}}</div>
             <div class="col-xs-2">{{currency[c]['price']}}</div>
             <div class="col-xs-2">{{ 100*(currency[c]['price'] - currency[c]['price_yesterday'])/currency[c]['price_yesterday']}}%</div>
