--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="container">
     <h1 class="text-center">USD to Other Currencies
-</h1>
+    </h1>
     <div class="col-sm-12 d-none d-sm-block">
         <div class="row">
             <div class="col-sm-2"><strong>Symbol</strong></div>
@@ -61,16 +61,36 @@
             <div class="col-sm-2"><span>{{currency[c]['currencySymbol']}}</span></div>
             <div class="col-sm-3"><span>{{currency[c]['currencyName']}}</span></div>
             <div class="col-sm-2">{{currency[c]['price']}}</div>
-            <div class="col-sm-2">{{ 100*(currency[c]['price'] - currency[c]['price_yesterday'])/currency[c]['price_yesterday']|round(1, 'ceil')}}%</div>
+            <div class="col-sm-2">{{ 100*(currency[c]['price'] -
+                currency[c]['price_yesterday'])/currency[c]['price_yesterday']|round(1, 'ceil')}}%
+            </div>
             <div class="col-sm-3"></div>
         </div>
     </div>
     <div class="col-xs-12 d-block d-sm-none">
         <div class="row">
-            <div class="col-xs-2"><div class="card"><div class="card-body">{{currency[c]['currencySymbol']}}</div></div></div>
-            <div class="col-xs-3"><div class="card"><div class="card-body">{{currency[c]['currencyName']}}</div></div></div>
-            <div class="col-xs-2"><div class="card"><div class="card-body">{{currency[c]['price']}}</div></div></div>
-            <div class="col-xs-2"><div class="card"><div class="card-body">{{ 100*(currency[c]['price'] - currency[c]['price_yesterday'])/currency[c]['price_yesterday']}}%</div></div></div>
+            <div class="col-xs-2">
+                <div class="card">
+                    <div class="card-body">{{currency[c]['currencySymbol']}}</div>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="card">
+                    <div class="card-body">{{currency[c]['currencyName']}}</div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card">
+                    <div class="card-body">{{currency[c]['price']}}</div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="card">
+                    <div class="card-body">{{ 100*(currency[c]['price'] -
+                        currency[c]['price_yesterday'])/currency[c]['price_yesterday']}}%
+                    </div>
+                </div>
+            </div>
             <div class="col-xs-3"></div>
         </div>
     </div>
