--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,8 @@
             <div class="col-sm-2"><span>{{currency[c]['currencySymbol']}}</span></div>
             <div class="col-sm-3"><span>{{currency[c]['currencyName']}}</span></div>
             <div class="col-sm-2">{{currency[c]['price']}}</div>
-            <div class="col-sm-2">{{ 100*(currency[c]['price'] -
-                currency[c]['price_yesterday'])/currency[c]['price_yesterday']|round(1, 'ceil')}}%
+            <div class="col-sm-2">{{ (100*(currency[c]['price'] -
+                currency[c]['price_yesterday'])/currency[c]['price_yesterday'])|round(3)}}%
             </div>
             <div class="col-sm-3"></div>
         </div>
@@ -86,8 +86,8 @@
             </div>
             <div class="col-xs-2">
                 <div class="card">
-                    <div class="card-body">{{ 100*(currency[c]['price'] -
-                        currency[c]['price_yesterday'])/currency[c]['price_yesterday']}}%
+                    <div class="card-body">{{ (100*(currency[c]['price'] -
+                        currency[c]['price_yesterday'])/currency[c]['price_yesterday'])|round(3)}}%
                     </div>
                 </div>
             </div>
