--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,10 @@
     <hr>
     {%endfor%}
 </div>
+<div class="footer text-center">
+    <h6>By <a href="https://john.nader.mx">nadermx</a> - Copyright © 2018 - <a href="mailto:hello@johnathannader.com">hello@johnathannader.com</a>
+        see the <a href="https://github.com/nadermx/unitedstatesdollar">Source Code</a></h6>
+</div>
 {% block scripts %}
 <script type="text/javascript" src="/static/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
