--- a/templates/index.html
+++ b/templates/index.html
@@ -17,20 +17,20 @@
 <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
         <a class="navbar-brand" href="/">United States Dollar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-            </ul>
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/signup">Sign Up</a>
-            </li>
-        </div>
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"-->
+                <!--aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">-->
+            <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <!--<div class="collapse navbar-collapse" id="navbarsExampleDefault">-->
+            <!--<ul class="navbar-nav mr-auto">-->
+            <!--</ul>-->
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="/login">Login</a>-->
+            <!--</li>-->
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="/signup">Sign Up</a>-->
+            <!--</li>-->
+        <!--</div>-->
     </nav>
 </div>
 <div class="container">
@@ -70,9 +70,9 @@
     <div class="col-xs-12 d-block d-sm-none">
         <div class="row">
             <div class="col-xs-2">
-                <div class="card">
-                    <div class="card-body">{{currency[c]['currencySymbol']}}</div>
-                </div>
+                <!--<div class="card">-->
+                    <!--<div class="card-body">{{currency[c]['currencySymbol']}}</div>-->
+                <!--</div>-->
             </div>
             <div class="col-xs-3">
                 <div class="card">
