--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
             <div class="col-sm-2">{{ (100*(currency[c]['price'] -
                 currency[c]['price_yesterday'])/currency[c]['price_yesterday'])|round(3)}}%
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3"><img src="/static/test.png" style="max-width:200px"></div>
         </div>
     </div>
     <div class="col-xs-12 d-block d-sm-none">
