--- a/templates/index.html
+++ b/templates/index.html
@@ -58,13 +58,13 @@
     {% for c in currency %}
     <div class="col-sm-12 d-none d-sm-block">
         <div class="row">
-            <div class="col-sm-2"><span>{{currency[c]['currencySymbol']}}</span></div>
+            <div class="col-sm-2"><span><strong>{{c}}</strong>{{currency[c]['currencySymbol']}}</span></div>
             <div class="col-sm-3"><span>{{currency[c]['currencyName']}}</span></div>
             <div class="col-sm-2">{{currency[c]['price']}}</div>
             <div class="col-sm-2">{{ (100*(currency[c]['price'] -
                 currency[c]['price_yesterday'])/currency[c]['price_yesterday'])|round(3)}}%
             </div>
-            <div class="col-sm-3"><img src="/static/test.png" style="max-width:200px"></div>
+            <div class="col-sm-3"><img src="/static/{{c}}.png" style="max-width:200px"></div>
         </div>
     </div>
     <div class="col-xs-12 d-block d-sm-none">
