--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="icon" type="image/png" href="/static/usd.png"/>
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image" content="/static/usd.png">
+    <link rel="icon" type="image/png" href="/static/unitestatesdollar.jpg"/>
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image" content="/static/unitestatesdollar.jpg">
     {% block head%}
     <title>{% block title %}United States Dollar{% endblock %}</title>
     <meta name="description" content="United States Dollar (USD) price, charts, and more ">
@@ -58,8 +58,8 @@
     {% for c in currency %}
     <div class="col-sm-12 d-none d-sm-block">
         <div class="row">
-            <div class="col-sm-2"><span><strong>{{c}}</strong>{{currency[c]['currencySymbol']}}</span></div>
-            <div class="col-sm-3"><span>{{currency[c]['currencyName']}}</span></div>
+            <div class="col-sm-2"><span>{{currency[c]['currencySymbol']}}</span></div>
+            <div class="col-sm-3"><span><strong>{{c}} </strong>{{currency[c]['currencyName']}}</span></div>
             <div class="col-sm-2">{{currency[c]['price']}}</div>
             <div class="col-sm-2">{{ (100*(currency[c]['price'] -
                 currency[c]['price_yesterday'])/currency[c]['price_yesterday'])|round(3)}}%
@@ -70,9 +70,9 @@
     <div class="col-xs-12 d-block d-sm-none">
         <div class="row">
             <div class="col-xs-2">
-                <!--<div class="card">-->
-                    <!--<div class="card-body">{{currency[c]['currencySymbol']}}</div>-->
-                <!--</div>-->
+                <div class="card">
+                    <div class="card-body"><span><strong>{{c}} </strong></div>
+                </div>
             </div>
             <div class="col-xs-3">
                 <div class="card">
