--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,16 @@ function init() {
 window.onload = init;
 
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126570619-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126570619-1');
+</script>
+
 {% endblock %}
 </body>
 </html>
