add img to mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,8 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-xs-3"></div>
-        </div>
+            <div class="col-sm-3"><img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                                       data-src="/static/{{c}}.png" style="max-width:100px"></div>        </div>
     </div>
     <hr>
     {%endfor%}
